2001-03-10  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSXML.m/.h: added errer, warning and fatal error methods with 
		line and col parameters in GSSAXHandler.

2001-03-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSCalendarDate.h:
	* Headers/gnustep/base/NSTimeZone.h: New files for MacOS-X compatibility
	* Headers/gnustep/base/Foundation.h: Add NSCalendarDate and NSTimeZone
	* Headers/gnustep/base/NSDate.h: Remove info in new files.
	* Source/GNUmakefile: Add new NSCalendarDate and NSTimeZone files.
	* Source/NSCalendarDate.m: Update for header changes.
	* Source/NSDate.m: ditto
	* Source/NSDateFormatter.m: ditto
	* Source/NSLog.m: ditto
	* Source/NSString.m: ditto
	* Source/NSTimeZone.m: ditto

2001-03-06  Adam Fedor  <fedor@gnu.org>

	* Source/libgnustep-base.def: Regenerate.

2001-03-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Changed ([+setUserLanguages:]) to use
	NSLanguages.
	* Documentation/gsdoc/NSUserDefaults.gsdoc: documented the
	([+setUserlanguages:]) method.

2001-03-04  Jonathan Gapen  <jagapen@home.com>

	* Documentation/gsdoc/NSCharacterSet.gsdoc: Documented some methods.
	* Headers/gnustep/unicode/caseconv.h: Updated case-mapping tables.
	* Source/NSBitmapCharSet.m: Added sanity check to initWithBitmap:
	* Source/Unicode.m: Changed uni_toupper() and uni_tolower() to use
	direct lookup in two-level tables, rather than a linear search.

2001-03-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: Corrected 
	([-_bundleResourcePathsWithRootPath:subPath:]) to use
	([NSUserDefaults +userLanguages]) to get language array again.
	* Documentation/gsdoc/NSUserDefaults.gsdoc: Updated and added
	information about +userLanguages

2001-03-07  Adam Fedor  <fedor@gnu.org>

	* Source/NSInvocation.m (-initWithTarget:selector:): Correct copying
	of unhandled argument types.

2001-03-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: ([methodSignatureForSelector:]) reliability